finished code ready for grade

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <footer>
         <p>Monroe Public Library &copy; 2018 All Rights Reserved</p>
     </footer>
+    <script src="mpl_links.js"></script>
 </body>
 
 </html>
